--- a/circle.yml
+++ b/circle.yml
@@ -1,3 +1,15 @@
+machine:
+  node:
+    version: 4.4.0
+dependencies:
+
+test:
+  pre:
+    - npm install -g protractor
+    - webdriver-manager update
+    - webdriver-manager start:
+          background: true
+          
 ## Customize test commands
 test:
   override:
