--- a/circle.yml
+++ b/circle.yml
@@ -1,20 +1,11 @@
 machine:
   node:
     version: 4.4.0
-dependencies:
-  post:
-    - npm start
-    - sleep 150 # wait for the server to start
-    - npm run protractor
-    
 test:
   pre:
-    - npm install -g protractor
-    - webdriver-manager update
-    - webdriver-manager start:
-          background: true
-          
-## Customize test commands
-test:
+    - npm start:
+        background: true
+    - sleep 5
   override:
-    - protractor config.js
+    - npm run protractor
+    - npm run update-webdriver
