--- a/package.json
+++ b/package.json
@@ -11,5 +11,11 @@
   },
   "engines": {
     "node": ">=0.10.0"
-  }  
+  },
+   "scripts": {
+    "preupdate-webdriver": "npm install",
+    "update-webdriver": "webdriver-manager update",
+    "preprotractor": "npm run update-webdriver",
+    "protractor": "protractor config.js"
+  },
 }
